@@ -3,16 +3,15 @@ package com.daqem.yamlconfig.client.gui.component;
 import com.daqem.uilib.gui.component.text.TruncatedTextComponent;
 import com.daqem.yamlconfig.YamlConfig;
 import com.daqem.yamlconfig.api.config.entry.IConfigEntry;
-import net.minecraft.client.gui.GuiGraphicsExtractor;
+import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.navigation.ScreenRectangle;
-import net.minecraft.locale.Language;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.FormattedText;
 import net.minecraft.network.chat.Style;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class TruncatedKeyTextComponent extends TruncatedTextComponent {
 
@@ -24,21 +23,17 @@ public class TruncatedKeyTextComponent extends TruncatedTextComponent {
     }
 
     @Override
-    public void extractRenderState(GuiGraphicsExtractor guiGraphics, int mouseX, int mouseY, float partialTick, int parentWidth, int parentHeight) {
-        super.extractRenderState(guiGraphics, mouseX, mouseY, partialTick, parentWidth, parentHeight);
+    public void render(GuiGraphics guiGraphics, int mouseX, int mouseY, float partialTick, int parentWidth, int parentHeight) {
+        super.render(guiGraphics, mouseX, mouseY, partialTick, parentWidth, parentHeight);
         if (configEntry != null && this.getRectangle().containsPoint(mouseX, mouseY)) {
             List<String> comments = configEntry
                     .getComments()
                     .getComments(false);
 
             if (!comments.isEmpty()) {
-                guiGraphics.setTooltipForNextFrame(
+                guiGraphics.renderComponentTooltip(
                         getFont(),
-                        Language.getInstance().getVisualOrder(
-                                comments.stream()
-                                        .map(Component::literal)
-                                        .map(comment -> (FormattedText) comment)
-                                        .toList()),
+                        comments.stream().map(Component::literal).collect(Collectors.toList()),
                         mouseX,
                         mouseY);
             }
